[package]
name = "fast_model"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
lp-modeler = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"

[[bin]]
name = "fast_model"
path = "src/bin/generator.rs"

[[bin]]
name = "sol_checker"
path = "src/bin/sol_checker.rs"
