[package]
name = "msstools"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
lp-modeler = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"

[[bin]]
name = "mss-generator"
path = "src/bin/generator.rs"

[[bin]]
name = "mss-checker"
path = "src/bin/sol_checker.rs"
