[package]
name = "msstools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
lp-modeler = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"
